# rust-http-server

./: .env  Cargo.toml  commands.txt  configuration.yaml  readme.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
