# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
edition = "2021"
name = "rust-server"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.8.0"
config = "0.11.0"
reqwest = "0.12.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.39.1", features = ["macros", "rt-multi-thread"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.8.0"

[[bin]]
name = "rust-server"
path = "src/main.rs"
